--- a/RDIP/Codes/exp.html
+++ b/RDIP/Codes/exp.html
@@ -19,7 +19,8 @@
 <div id="hidden_div" style="display:none;">Form a sentence (Declarative or Interrogative) from the given words(Select the buttons in proper order)</div>
 <div id="wordsSel"></div>
                     <button onclick="clearDisplay()" id="reformBtn">Re-form the Sentence</button><br>
-                   
-
+                    <button onclick="checkCorrectness()" class ="hide" id="checkBtn">Check Correctness of the Sentence</button>
+                    <div id="solution"></div><br>
+                    <button onclick="displaySols()" id="solsBtn" class="hide">
 </body>
 </html>
