--- a/RDIP/Codes/exp.html
+++ b/RDIP/Codes/exp.html
@@ -21,7 +21,8 @@
                     <button onclick="clearDisplay()" id="reformBtn">Re-form the Sentence</button><br>
                     <button onclick="checkCorrectness()" class ="hide" id="checkBtn">Check Correctness of the Sentence</button>
                     <div id="solution"></div><br>
-                    <button onclick="displaySols()" id="solsBtn" class="hide">
+                    <button onclick="displaySols()" id="solsBtn" class="hide">GET CORRECT SENTENCE</button>
+                    <div id="answers"></div>
 
 </body>
 </html>
