--- a/RDIP/Codes/exp.html
+++ b/RDIP/Codes/exp.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>Experiment</title>       
+        <title>Experiment1</title>       
         <link href="exp.css" rel="stylesheet"/>
         <script src="in.js"></script>
     </head>
