--- a/RDIP/Codes/exp2.html
+++ b/RDIP/Codes/exp2.html
@@ -10,12 +10,26 @@
         <span>Types and Tokens</span><br>
         <span>Experiment</span>
             <div class="corpusbox"> 
-                <select>
-                    <option>---Select a Corpus---</option>
-                    <option>Corpus 1</option>
-                    <option>Corpus 2</option>
-                    <option>Corpus 3</option>
+                <select name="corpus" id="corpus" onchange="dispCorpus(this.value)" onfocus="this.selectedIndex = -1;">
+                    <option value="select">---Select a Corpus---</option>
+                    <option value="0">Corpus 1</option>
+                    <option value="1">Corpus 2</option>
+                    <option value="2">Corpus 3</option>
                     </select>
             </div>	
+            <div>
+                <p id="alt"></p>
+                <form>
+                    <table>
+                        <tr><td>#tokens:</td>
+                        <td id="tokens"><input type="text"></td></tr>
+                        <tr><td>#types:</td>
+                        <td id="types"><input type="text"></td></tr>
+                    </table><br>
+                        <input type="button" value="SUBMIT">
+                </form>
+                
+            </div>
+       
     </body>
 </html>
