--- a/RDIP/Codes/exp2.html
+++ b/RDIP/Codes/exp2.html
@@ -28,7 +28,14 @@
                     </table><br>
                         <input type="button" value="SUBMIT">
                 </form>
-                
+                <h4 id="solution"></h4>
+                <button id = "continue">CONTINUE</button>
+                <p id="msg"></p>
+                <form>
+                    <input type="text"><br><br>
+                    <input type="button">
+                    <h4 id="solutionn"></h4>
+                </form>
             </div>
        
     </body>
