--- a/RDIP/Codes/exp2.html
+++ b/RDIP/Codes/exp2.html
@@ -10,7 +10,7 @@
         <span>Types and Tokens</span><br>
         <span>Experiment</span>
             <div class="corpusbox"> 
-                <select name="corpus" id="corpus" onchange="dispCorpus(this.value)" onfocus="this.selectedIndex = -1;">
+                <select name="corpus" id="corpus" onchange="selectsel(this.value)" onfocus="this.selectedIndex = -1;">
                     <option value="select">---Select a Corpus---</option>
                     <option value="0">Corpus 1</option>
                     <option value="1">Corpus 2</option>
